# PathoEBM

src/: check_mcp.py  evidence_update_report.md  init_tools.py  middleresult.txt  pyproject.toml  test_MCP.py
src/local_deep_research/: __init__.py  config.py  connect_mcp.py  debug_selector.py  evaluate_local.py  fix_clinical_tools.py  full.md  main.py  score_evaluation_results.py  search_system.py  search_system_support.py  test.txt  tool_embedding_retriever.py  tool_executor.py  tool_selector.py  utils.py
src/local_deep_research/agents/: __init__.py  clinical_trial_agent.py  context_bus.py  followup_agent.py  mdt_report_agent.py  prognosis_agent.py  react_search_agent.py  reviewer_agent.py
src/local_deep_research/models/: __init__.py  reference_pool.py
src/local_deep_research/pipeline/: __init__.py  knowledge_processor.py  prognosis_retrieval.py  search_planner.py
src/local_deep_research/skills/nccn_followup/: __init__.py  followup_skill.py
src/local_deep_research/skills/nccn_followup/references/: full-followup.md
src/local_deep_research/skills/prognosis/: __init__.py  prognosis_skill.py
src/local_deep_research/skills/prognosis/references/: SEER_子宫内膜癌FIGO2009_2023分期生存率.md
src/local_deep_research/tools/template/: templateagent.py
src/local_deep_research/utilties/: search_utilities.py
