[project]
name = "oriagents"
version = "0.1.0"
description = "虚拟疾病生物学家"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "anthropic>=0.52.2",
    "anyio>=4.9.0",
    "arxiv>=2.2.0",
    "bcrypt>=4.3.0",
    "bio>=1.8.0",
    "browser-use>=0.1.24",
    "click>=8.2.1",
    "colorlog>=6.9.0",
    "datasets>=3.6.0",
    "dynaconf>=3.2.11",
    "email-validator>=2.2.0",
    "fabric>=3.2.2",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "gseapy>=1.1.9",
    "humanize>=4.12.3",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "langgraph-cli>=0.3.1",
    "markdown2>=2.5.3",
    "mcp>=1.9.3",
    "memoization>=0.4.0",
    "networkx>=3.5",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "platformdirs>=4.3.8",
    "playwright>=1.52.0",
    "psutil>=7.0.0",
    "pybase62>=1.0.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "pyzmq>=26.4.0",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "snowflake-id>=1.0.2",
    "sqlmodel>=0.0.24",
    "toml>=0.10.2",
    "tooluniverse>=0.2.0",
    "unstructured>=0.17.2",
    "weasyprint>=65.1",
]
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore::UserWarning"]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
